--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
         "test:manga": "jest ./test/manga",
         "test:lightnovels": "jest ./test/light-novels",
         "test:news": "jest ./test/news",
-        "test:meta": "jest ./test/meta"
+        "test:meta": "jest ./test/meta",
+        "test:flixhq": "jest ./test/movies/flixhq.test.ts"
     },
     "files": [
         "dist"
